# pessoa

./: .gitignore  COPYING  DocumentationOptimalControl.md  INSTALL_INSTRUCTIONS  INSTALL_INSTRUCTIONS.rtf  Makefile  Makefile.in  ProjectHome.md  config.h.in  config_extra_vars.txt  configure  configure.ac  configure_ac_extra_macros  install_Pessoa.sh
Pessoa_abstract/src/: Makefile  Makefile.in  pessoa_abstract.cpp  pessoa_abstract_add.cpp
Pessoa_control/Simulink/: symbolic_controller.mdl
Pessoa_control/src/: .directory  Makefile  Makefile.in  pessoa_control_nowarn.cpp  pessoa_controller.cpp
Pessoa_design/src/: Makefile  Makefile.in  pessoa_design.cpp  pss_design.m
Pessoa_optimal_control/: HOWTO_MATLAB
Pessoa_optimal_control/src/: Makefile.in  pessoa_cost2add.cpp  pessoa_cost2add.hh  pessoa_dsp.cpp  pessoa_dsp.hh  pessoa_dspController.cpp  pessoa_dspController.hh  pessoa_ndsp.cpp  pessoa_ndsp.hh
Pessoa_optimal_control/src/lib/: FibonacciHeap.cpp  ShortestPath.hh  (+3 more)
cudd-2.5.0/: Makefile
hscc13/: Makefile  README  include.mk
hscc13/cfiles/: Makefile  mcis.c
hscc13/cudd-2.5.0/: Makefile
hscc13/examples/: example2D.m
hscc13/hfiles/: mcis.h
hscc13/mfiles/: mcis.m  mcis_mpt.m
oc_cost/: COPYING  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
oc_cost/autom4te.cache/: output.0  output.2  output.3  output.4  output.5  output.6  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
oc_cost/cudd-2.5.0/dddmp/: Makefile  Makefile.in
oc_cost/cudd-2.5.0/epd/: Makefile  Makefile.in
oc_cost/macros.m4/: matlab.m4  platform.m4
oc_cost/shortestPath/: ShortestPath.cpp  ShortestPath.h  ShortestPath.hh  cuddObj.cc  cuddObj.hh  documentation.doxygen.Doxyfile  main.cpp  main.hh
oc_cost/shortestPath/Debug/: Makefile  objects.mk  sources.mk  subdir.mk
oc_cost/shortestPath/doc/html/: ShortestPath_8cpp.html  ShortestPath_8cpp__incl.map  ShortestPath_8cpp__incl.md5  ShortestPath_8h.html  ShortestPath_8h.js  ShortestPath_8h__dep__incl.map  ShortestPath_8h__dep__incl.md5  ShortestPath_8h__incl.map  ShortestPath_8h__incl.md5  ShortestPath_8h_source.html  ShortestPath_8hh.html  ShortestPath_8hh.js  ShortestPath_8hh__dep__incl.map  ShortestPath_8hh__dep__incl.md5  ShortestPath_8hh__incl.map  ShortestPath_8hh__incl.md5  ShortestPath_8hh_source.html  annotated.html  annotated.js  classABDD-members.html  classABDD.html  classABDD.js  classABDD__coll__graph.map  classABDD__inherit__graph.md5  classADD-members.html  classADD.html  classADD__inherit__graph.map  classBDD-members.html  classBDD.html  classBDD.js  classBDD__coll__graph.map  classBDD__coll__graph.md5  classCapsule-members.html  classCapsule.html  classCudd-members.html  classCudd.html  classDD-members.html  classDD.html  classDD.js  classShortestPath-members.html  (+36 more)
oc_cost/shortestPath/doc/html/search/: all_61.js  all_63.js  all_64.js  all_65.js  all_73.js  classes_61.js  classes_64.js  classes_73.js  defines_64.js  files_6d.js  files_73.js  functions_64.js  functions_73.js  search.js
oc_cost/shortestPath/html/: ShortestPath_8cpp.html  ShortestPath_8cpp__incl.map  ShortestPath_8cpp__incl.md5  ShortestPath_8h.html  ShortestPath_8h.js  ShortestPath_8h__incl.map  ShortestPath_8h__incl.md5  ShortestPath_8h_source.html  annotated.html  classABDD-members.html  classABDD.html  classABDD__coll__graph.md5  classABDD__inherit__graph.map  classADD-members.html  classADD.html  classADD.js  classADD__coll__graph.md5  classBDD-members.html  classBDD.html  classCapsule-members.html  classCapsule.html  classCapsule.js  classCudd-members.html  classCudd.html  classCudd.js  classDD-members.html  classDD.html  classDD__inherit__graph.map  classDD__inherit__graph.md5  classFloydWarshallParam-members.html  classFloydWarshallParam.html  classFloydWarshallParam.js  classShortestPath-members.html  classShortestPath.html  classShortestPath.js  classTest.html  classZDD-members.html  classZDD.html  classZDD.js  classes.html  (+31 more)
oc_cost/shortestPath/html/search/: all_64.js  all_66.js  all_73.js  classes_63.js  classes_66.js  files_73.js  functions_61.js  functions_63.js  functions_73.js  functions_7e.js  search.js
oc_cost/src/: Makefile  Makefile.in  Makefile.in~  Makefile~  pessoa_controller.cpp  pessoa_controller.hh  pessoa_cost2add.cpp  pessoa_cost2add.hh  pessoa_dsp.cpp  pessoa_dsp.hh  pessoa_dspController.cpp  pessoa_dspController.hh  pessoa_ndsp.cpp  pessoa_ndsp.hh  shortestPathMex.cpp  shortestPathMex.hh
oc_cost/src/lib/: Makefile  Makefile.in  Makefile~  ShortestPath.cpp  ShortestPath.hh  TODO.txt  documentation.doxygen.Doxyfile  main.cpp  main.hh
oc_cost/src/lib/Debug/: Makefile.in~  Makefile~
usr/DC-DC converter/: DCDC.bdd  DCDCController.bdd  DCDCController_dom.bdd  DCDCController_symb.mat  DCDCSmlnk.mdl  DCDCSmlnk.mdl.r2007a  DCDCTargetSet.bdd  DCDCTargetSet_symb.mat  DCDC_symb.mat  dc-dc_converter.m  plot_domain.m
usr/FTS/: FTS.bdd  FTSController.bdd  FTSController_dom.bdd  FTSController_nd.bdd  FTSController_nd_dom.bdd  FTSController_nd_symb.mat  FTSController_symb.mat  FTS_nd_symb.mat  FTS_symb.mat  fts.m  iterate_fti.m  p.bdd  pss_dynamics.m
usr/Unicycle/: Robot.m  Robot_smlnk.mdl  pss_dynamics.m  pss_target_set.m  unicycle_symb.mat
usr/bug/: DCMotor.bdd  DCMotor.m  DCMotorController.bdd  DCMotorController_symb.mat  DCMotorTargetSet.bdd  DCMotorTargetSet_symb.mat  DCMotor_symb.mat
usr/example/: DCMotor.bdd  DCMotor.m  DCMotorController.bdd  DCMotorController_dom.bdd  DCMotorController_symb.mat  DCMotorSmlnk.mdl  DCMotorSmlnk.mdl.r2009b  DCMotorTargetSet.bdd
usr/pritam/: ACC.mdl  ACCController.bdd  ACCController_dom.bdd  ACCController_symb.mat  ACC_symb.mat  p.bdd  p_symb.mat  pritam_acc.m  pss_dynamics.m
usr/unicycle_old/: Constraint_symb.mat  Robot.m  Robot_smlnk.mdl  Target.bdd  Target_symb.mat  pss_dynamics.m  sfunxy_obs.m  unicycle_symb.mat  unicyle_control.bdd  unicyle_control_dom.bdd  unicyle_control_symb.mat
utils/src/: Makefile  Makefile.in  pessoa_charf2bdd.cpp  pessoa_combine.cpp  pessoa_compare_sets.cpp  pessoa_set2bdd.cpp
(+12 files in other folders)
